added spellCheck